Avoid overlap of signed in username and menu items.

--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -49,7 +49,8 @@
 }
 
 .hamburger {
-  display: none;
+  /* display: none; */
+  opacity: 0;
 }
 
 .spacer{
@@ -86,6 +87,7 @@
   }
 
   .hamburger {
+    opacity: 1;
     display: flex;
     flex-direction: column;
     cursor: pointer;
